kubernetes/mini-projet/pma/pma-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pma-deployment
  namespace: k8s-projet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
