kubernetes/mini-projet/pma/pma-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pma-service
  namespace: k8s-projet
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
